# Goggle-Epoxy-bad

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  goggle-epoxy.code-workspace
src/: Assets.cpp  Assets.hpp  activity.cpp  activity.hpp  context.cpp  context.hpp  declarations.hpp  devices.hpp  exception.cpp  exception.hpp  gpiobtn.cpp  gpiobtn.hpp  hardware.cpp  hardware.hpp  input.cpp  input.hpp  l3gd20.cpp  l3gd20.hpp  lsm303.cpp  lsm303.hpp  main.cpp  module.mk  motion.cpp  motion.hpp  mpl3115a2.cpp  mpl3115a2.hpp  scheduler.cpp  scheduler.hpp  ssd1306.cpp  ssd1306.hpp  test.cpp  util.cpp  util.hpp  weather.hpp
src/activities/: Home_Sensors.cpp  Home_Sensors.hpp  blank.cpp  blank.hpp
src/devices/: gpiobtn.cpp  gpiobtn.hpp  l3gd20.cpp  l3gd20.hpp  mpl3115a2.cpp  mpl3115a2.hpp  ssd1306.cpp  ssd1306.hpp
